--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a theme for GitHub Pages.
+title: Time Machine theme
+description: Time Machine is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-Cayman
+theme: jekyll-theme-Time Machine
